rustdocs/errors/rust-bitcoin-bitcoin-src-blockdata-script-tests.rs.txt
error[E0433]: failed to resolve: there are too many leading `super` keywords
 --> ../rust-bitcoin/bitcoin/src/blockdata/script/tests.rs:5:5
  |
5 | use super::*;
  |     ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `consensus`
 --> ../rust-bitcoin/bitcoin/src/blockdata/script/tests.rs:6:12
  |
6 | use crate::consensus::encode::{deserialize, serialize};
  |            ^^^^^^^^^ use of unresolved module or unlinked crate `consensus`
  |
help: you might be missing a crate named `consensus`, add it to your project and import it in your code
  |
3 + extern crate consensus;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `crypto`
 --> ../rust-bitcoin/bitcoin/src/blockdata/script/tests.rs:7:12
  |
7 | use crate::crypto::key::{PublicKey, XOnlyPublicKey};
  |            ^^^^^^ use of unresolved module or unlinked crate `crypto`
  |
help: you might be missing a crate named `crypto`, add it to your project and import it in your code
  |
3 + extern crate crypto;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `script`
 --> ../rust-bitcoin/bitcoin/src/blockdata/script/tests.rs:8:12
  |
8 | use crate::script::borrowed::{ScriptPubKeyExt as _, ScriptPubKeyExtPriv a...
  |            ^^^^^^ use of unresolved module or unlinked crate `script`
  |
help: you might be missing a crate named `script`, add it to your project and import it in your code
  |
3 + extern crate script;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `script`
 --> ../rust-bitcoin/bitcoin/src/blockdata/script/tests.rs:9:12
  |
9 | use crate::script::witness_program::WitnessProgram;
  |            ^^^^^^ use of unresolved module or unlinked crate `script`
  |
help: you might be missing a crate named `script`, add it to your project and import it in your code
  |
3 + extern crate script;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `script`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/tests.rs:10:12
   |
10 | use crate::script::witness_version::WitnessVersion;
   |            ^^^^^^ use of unresolved module or unlinked crate `script`
   |
help: you might be missing a crate named `script`, add it to your project and import it in your code
   |
 3 + extern crate script;
   |

error[E0432]: unresolved import `hex_lit`
 --> ../rust-bitcoin/bitcoin/src/blockdata/script/tests.rs:3:5
  |
3 | use hex_lit::hex;
  |     ^^^^^^^ use of unresolved module or unlinked crate `hex_lit`
  |
help: you might be missing a crate named `hex_lit`, add it to your project and import it in your code
  |
3 + extern crate hex_lit;
  |

error[E0432]: unresolved imports `crate::opcodes`, `crate::Amount`, `crate::FeeRate`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/tests.rs:11:13
   |
11 | use crate::{opcodes, Amount, FeeRate};
   |             ^^^^^^^  ^^^^^^  ^^^^^^^ no `FeeRate` in the root
   |             |        |
   |             |        no `Amount` in the root
   |             no `opcodes` in the root

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `primitives`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/tests.rs:14:12
   |
14 | type Tag = primitives::script::ScriptSigTag;
   |            ^^^^^^^^^^ use of unresolved module or unlinked crate `primitives`
   |
   = help: you might be missing a crate named `primitives`

error[E0425]: cannot find type `ScriptSig` in the crate root
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/tests.rs:15:22
   |
15 | type Script = crate::ScriptSig;
   |                      ^^^^^^^^^ not found in the crate root

error[E0425]: cannot find type `ScriptSigBuf` in the crate root
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/tests.rs:16:25
   |
16 | type ScriptBuf = crate::ScriptSigBuf;
   |                         ^^^^^^^^^^^^ not found in the crate root

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0425, E0432, E0433.
For more information about an error, try `rustc --explain E0425`.
